--- a/x11-libs/xcb-util/ChangeLog
+++ b/x11-libs/xcb-util/ChangeLog
@@ -1,6 +1,22 @@
 # ChangeLog for x11-libs/xcb-util
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/xcb-util/ChangeLog,v 1.31 2009/06/10 23:41:29 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/xcb-util/ChangeLog,v 1.36 2009/07/08 20:43:10 maekke Exp $
+
+  08 Jul 2009; Markus Meier <maekke@gentoo.org> xcb-util-0.3.3.ebuild:
+  amd64 stable, bug #250329
+
+  08 Jul 2009; Brent Baude <ranger@gentoo.org> xcb-util-0.3.3.ebuild:
+  Marking xcb-util-0.3.3 ppc64 for bug 276011
+
+  08 Jul 2009; Jeroen Roovers <jer@gentoo.org> xcb-util-0.3.3.ebuild:
+  Stable for HPPA (bug #276011).
+
+  07 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
+  xcb-util-0.3.3.ebuild:
+  stable x86, bug 276011
+
+  06 Jul 2009; Ferris McCormick <fmccor@gentoo.org> xcb-util-0.3.3.ebuild:
+  Sparc stable, Bug #276011.
 
   10 Jun 2009; MATSUU Takuto <matsuu@gentoo.org> xcb-util-0.3.5.ebuild:
   Fixed dependency.
