--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.00.13825 (13 Jul 2009)
+
+  13 Jul 2009; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.13629.ebuild, +portage-2.2.00.13825.ebuild:
+  New snapshot, without bugs this time?
+
 *portage-2.2.00.13797 (07 Jul 2009)
 
   07 Jul 2009; Fabian Groffen <grobian@gentoo.org>
