--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.00.13827 (14 Jul 2009)
+
+  14 Jul 2009; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.13825.ebuild, +portage-2.2.00.13827.ebuild:
+  Let's try it another time. Fixed bugs #277011 and #277815.
+
 *portage-2.2.00.13825 (13 Jul 2009)
 
   13 Jul 2009; Fabian Groffen <grobian@gentoo.org>
