--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  16 Jul 2009; Jeremy Olexa <darkside@gentoo.org>
+  -portage-2.2.00.13797.ebuild:
+  remove old, masked version
+
 *portage-2.2.00.13827 (14 Jul 2009)
 
   14 Jul 2009; Fabian Groffen <grobian@gentoo.org>
