--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.00.13830 (16 Jul 2009)
+
+  16 Jul 2009; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.13827.ebuild, +portage-2.2.00.13830.ebuild:
+  Bump for fix for bug #278014
+
   16 Jul 2009; Jeremy Olexa <darkside@gentoo.org>
   -portage-2.2.00.13797.ebuild:
   remove old, masked version
