--- a/sys-apps/baselayout-prefix/ChangeLog
+++ b/sys-apps/baselayout-prefix/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  20 Jul 2009; Markus Duft <mduft@gentoo.org>
+  baselayout-prefix-1.12.5-r6.ebuild,
+  +files/baselayout-1.12.5-prefix-chaining-recursion.patch:
+  added patch for profile recursion, which was destroying some internal
+  information before...
+
   14 Jul 2009; Markus Duft <mduft@gentoo.org>
   files/baselayout-1.12.5-prefix-chaining-pkgconfig.patch:
   fixed mistake in previous patch
