--- a/dev-libs/openssl/files/gentoo.config-0.9.8
+++ b/dev-libs/openssl/files/gentoo.config-0.9.8
@@ -124,7 +124,10 @@ darwin)
 	;;
 hpux)
 	case ${chost_machine} in
-		ia64)	machine=ia64-${compiler} ;;
+		ia64)   machine=ia64-${compiler} ;;
+		hppa64) machine=parisc2-${compiler}; system=${system}64 ;;
+		hppa1*) machine=parisc-${compiler} ;;
+		hppa*)  machine=parisc2-${compiler} ;;
 	esac
 	;;
 solaris)
