--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.00.13849 (22 Jul 2009)
+
+  22 Jul 2009; Fabian Groffen <grobian@gentoo.org>
+  +portage-2.2.00.13849.ebuild:
+  Version bump, fix bug #278373, add preserve-libs support for Interix and
+  Windows
+
   22 Jul 2009; Fabian Groffen <grobian@gentoo.org>
   -files/portage-2.2.00.13133-prefix-chaining.patch,
   -files/portage-2.2.00.13243-prefix-chaining-path-noportage.patch,
