--- a/net-libs/xulrunner/ChangeLog
+++ b/net-libs/xulrunner/ChangeLog
@@ -1,6 +1,17 @@
 # ChangeLog for net-libs/xulrunner
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/ChangeLog,v 1.222 2009/07/22 17:45:26 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/ChangeLog,v 1.224 2009/07/31 15:02:26 arfrever Exp $
+
+  31 Jul 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  xulrunner-1.9.1-r1.ebuild, xulrunner-1.9.1.1.ebuild:
+  Don't use ROOT in src_install. Found by Jeremy Olexa.
+
+*xulrunner-1.9.1.1 (31 Jul 2009)
+
+  31 Jul 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
+  +xulrunner-1.9.1.1.ebuild:
+  Bump xulrunner from mozilla overlay (same release, new patch tarball and
+  ebuild changes by Anarchy)
 
 *xulrunner-1.9.0.12 (22 Jul 2009)
 
