--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.00.13876 (02 Aug 2009)
+
+  02 Aug 2009; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.13683.ebuild, +portage-2.2.00.13876.ebuild:
+  Version bump, fixes bug #279550
+
 *portage-2.2.00.13849 (22 Jul 2009)
 
   22 Jul 2009; Fabian Groffen <grobian@gentoo.org>
