--- a/app-misc/mc/ChangeLog
+++ b/app-misc/mc/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for app-misc/mc
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/mc/ChangeLog,v 1.149 2009/07/21 10:05:07 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/mc/ChangeLog,v 1.153 2009/08/02 15:39:41 ssuominen Exp $
+
+  02 Aug 2009; Samuli Suominen <ssuominen@gentoo.org> mc-4.7.0_pre1.ebuild,
+  +files/mc-4.7.0_pre1-ebuild_syntax.patch:
+  Update ebuild syntax wrt #198019, thanks to Lars Wendler for patch.
+
+*mc-4.7.0_pre1 (02 Aug 2009)
+
+  02 Aug 2009; Samuli Suominen <ssuominen@gentoo.org> +mc-4.7.0_pre1.ebuild:
+  Version bump.
 
   21 Jul 2009; Samuli Suominen <ssuominen@gentoo.org> mc-4.6.2_pre1.ebuild,
   +files/mc-4.6.2_pre1-null.patch:
@@ -17,10 +26,6 @@
   24 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   mc-4.6.2_pre1.ebuild:
   Fix encoding of some files (bug #230832).
-
-  24 Nov 2008; <ssuominen@gentoo.org> metadata.xml, mc-4.6.2_pre1.ebuild:
-  Rename my old e-mail drac at gentoo.org to ssuominen at gentoo.org. Move
-  patchset tarball from my old dev space to gentoo mirrors.
 
   17 Nov 2008; Diego E. Pettenò <flameeyes@gentoo.org>
   files/mc-4.6.1-bash-all.patch:
