--- a/app-office/dia/ChangeLog
+++ b/app-office/dia/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for app-office/dia
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/dia/ChangeLog,v 1.116 2009/07/27 17:14:43 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/dia/ChangeLog,v 1.119 2009/08/03 03:48:46 jer Exp $
+
+  03 Aug 2009; Jeroen Roovers <jer@gentoo.org> dia-0.97-r1.ebuild:
+  Stable for HPPA (bug #277843).
+
+  02 Aug 2009; Raúl Porcel <armin76@gentoo.org> dia-0.97-r1.ebuild:
+  alpha/ia64/sparc stable wrt #277843
+
+  31 Jul 2009; Christian Faulhammer <fauli@gentoo.org> dia-0.97-r1.ebuild:
+  stable x86, bug 277843
 
   27 Jul 2009; nixnut <nixnut@gentoo.org> dia-0.97-r1.ebuild:
   ppc stable #277843
