--- a/dev-python/nose/ChangeLog
+++ b/dev-python/nose/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/nose
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/nose/ChangeLog,v 1.30 2009/07/28 05:37:40 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/nose/ChangeLog,v 1.32 2009/08/02 14:52:12 maekke Exp $
+
+  02 Aug 2009; Markus Meier <maekke@gentoo.org> nose-0.11.0.ebuild:
+  amd64 stable, bug #278978
+
+  02 Aug 2009; Markus Meier <maekke@gentoo.org> nose-0.11.0.ebuild:
+  x86 stable, bug #278978
 
   28 Jul 2009; Jeroen Roovers <jer@gentoo.org> nose-0.11.0.ebuild:
   Stable for HPPA (bug #278978).
