--- a/dev-python/pygtk/ChangeLog
+++ b/dev-python/pygtk/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for dev-python/pygtk
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pygtk/ChangeLog,v 1.213 2009/07/26 23:24:07 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pygtk/ChangeLog,v 1.216 2009/08/02 11:25:16 armin76 Exp $
+
+  02 Aug 2009; Raúl Porcel <armin76@gentoo.org> pygtk-2.14.1-r1.ebuild:
+  alpha/arm/ia64/sh/sparc stable wrt #279391
+
+  31 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
+  pygtk-2.14.1-r1.ebuild:
+  stable x86, bug 279391
+
+  30 Jul 2009; Jeremy Olexa <darkside@gentoo.org> pygtk-2.14.1-r1.ebuild:
+  amd64 stable, bug 279391
 
 *pygtk-2.14.1-r1 (26 Jul 2009)
 
