--- a/dev-python/sip/ChangeLog
+++ b/dev-python/sip/ChangeLog
@@ -1,6 +1,21 @@
 # ChangeLog for dev-python/sip
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/sip/ChangeLog,v 1.134 2009/06/28 00:45:08 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/sip/ChangeLog,v 1.137 2009/08/01 23:31:41 arfrever Exp $
+
+  01 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  sip-4.8.2.ebuild:
+  Set SUPPORT_PYTHON_ABIS.
+
+  31 Jul 2009; Markos Chandras <hwoarang@gentoo.org> -sip-4.2.1.ebuild,
+  -sip-4.2.1-r1.ebuild, -sip-4.6.ebuild, -sip-4.7.1.ebuild,
+  -sip-4.7.3.ebuild, -sip-4.7.5.ebuild, -sip-4.7.6.ebuild,
+  -sip-4.7.7.ebuild:
+  Remove old ebuilds
+
+*sip-4.8.2 (31 Jul 2009)
+
+  31 Jul 2009; Alex Alexander <wired@gentoo.org> +sip-4.8.2.ebuild:
+  version bump
 
   28 Jun 2009; Markos Chandras <hwoarang@gentoo.org> -sip-4.8.ebuild:
   Remove old ebuild
