--- a/net-im/pidgin/ChangeLog
+++ b/net-im/pidgin/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for net-im/pidgin
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/pidgin/ChangeLog,v 1.111 2009/08/13 21:22:46 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/pidgin/ChangeLog,v 1.113 2009/08/18 22:31:37 fauli Exp $
+
+  18 Aug 2009; Christian Faulhammer <fauli@gentoo.org> pidgin-2.5.9.ebuild:
+  stable x86, security bug 281545
+
+*pidgin-2.5.9 (18 Aug 2009)
+
+  18 Aug 2009; Olivier Crête <tester@gentoo.org>
+  -files/pidgin-2.5.4-icq.patch, -files/pidgin-2.5.5-msnm.patch,
+  -pidgin-2.5.6.ebuild, -pidgin-2.5.7.ebuild, +pidgin-2.5.9.ebuild:
+  Version bump, security bug #281545
 
   13 Aug 2009; Samuli Suominen <ssuominen@gentoo.org> pidgin-2.5.6.ebuild,
   pidgin-2.5.7.ebuild, pidgin-2.5.8.ebuild:
