--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  19 Aug 2009; Fabian Groffen <grobian@gentoo.org>
+  portage-2.2.00.13878.ebuild:
+  update eselect-news dependency to be able to deal with eselect-1.2
+
 *portage-2.2.00.13878 (03 Aug 2009)
 
   03 Aug 2009; Fabian Groffen <grobian@gentoo.org>
