--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.00.14153 (24 Aug 2009)
+
+  24 Aug 2009; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.13830.ebuild, +portage-2.2.00.14153.ebuild:
+  Quantum leap jump, this version resembles version 2.2_rc40+
+
   19 Aug 2009; Fabian Groffen <grobian@gentoo.org>
   portage-2.2.00.13878.ebuild:
   update eselect-news dependency to be able to deal with eselect-1.2
