--- a/dev-libs/expat/ChangeLog
+++ b/dev-libs/expat/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/expat
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/expat/ChangeLog,v 1.82 2009/08/17 20:16:28 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/expat/ChangeLog,v 1.84 2009/08/23 09:04:43 nixnut Exp $
+
+  23 Aug 2009; nixnut <nixnut@gentoo.org> expat-2.0.1-r2.ebuild:
+  ppc stable #280615
+
+  21 Aug 2009; Jeroen Roovers <jer@gentoo.org> expat-2.0.1-r2.ebuild:
+  Stable for HPPA (bug #280615).
 
 *expat-2.0.1-r2 (17 Aug 2009)
 
