--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.00.14153-r1 (26 Aug 2009)
+
+  26 Aug 2009; Markus Duft <mduft@gentoo.org> -portage-2.2.00.14153.ebuild,
+  +portage-2.2.00.14153-r1.ebuild,
+  +files/portage-2.2.00.14153-imports.patch:
+  added patch to fix dispatch-conf and quickpkg - imports where wrong
+
 *portage-2.2.00.14153 (24 Aug 2009)
 
   24 Aug 2009; Fabian Groffen <grobian@gentoo.org>
