--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  27 Aug 2009; Fabian Groffen <grobian@gentoo.org>
+  portage-2.2.00.14160.ebuild:
+  Add back old style way to retrieve rootuser, for those who don't have an
+  up-to-date Portage yet
+
 *portage-2.2.00.14160 (26 Aug 2009)
 
   26 Aug 2009; Fabian Groffen <grobian@gentoo.org>
