--- a/sys-libs/readline/ChangeLog
+++ b/sys-libs/readline/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for sys-libs/readline
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/readline/ChangeLog,v 1.129 2009/05/18 11:48:26 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/readline/ChangeLog,v 1.131 2009/08/31 00:36:13 ranger Exp $
+
+  31 Aug 2009; Brent Baude <ranger@gentoo.org> readline-6.0_p3.ebuild:
+  stable ppc64, bug 283155
+
+*readline-6.0_p4 (29 Aug 2009)
+
+  29 Aug 2009; Mike Frysinger <vapier@gentoo.org> +readline-6.0_p4.ebuild:
+  Version bump #283138 by Arfrever Frehtes Taifersar Arahesis.
 
   18 May 2009; Diego E. Pettenò <flameeyes@gentoo.org>
   readline-6.0_p3.ebuild:
