--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.00.14183 (04 Sep 2009)
+
+  04 Sep 2009; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.14179.ebuild, +portage-2.2.00.14183.ebuild:
+  Bump for Interix users, fixing an unicode problem
+
 *portage-2.2.00.14179 (02 Sep 2009)
 
   02 Sep 2009; Fabian Groffen <grobian@gentoo.org>
