--- a/dev-java/winjdk-bin/ChangeLog
+++ b/dev-java/winjdk-bin/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/winjdk-bin
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*winjdk-bin-1.6.0.07-r1 (15 Sep 2009)
+
+  15 Sep 2009; Markus Duft <mduft@gentoo.org> -winjdk-bin-1.6.0.07.ebuild,
+  +winjdk-bin-1.6.0.07-r1.ebuild:
+  remove java symlink in usr/jre/bin - not needed and confuses java
 
   16 Sep 2008; Markus Duft <mduft@gentoo.org> winjdk-bin-1.6.0.07.ebuild:
   add comment that windows jdk cannot be installed slotted, since we cannot
