--- a/app-admin/eselect-python/ChangeLog
+++ b/app-admin/eselect-python/ChangeLog
@@ -1,6 +1,17 @@
 # ChangeLog for app-admin/eselect-python
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-python/ChangeLog,v 1.41 2009/09/02 17:28:57 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-python/ChangeLog,v 1.44 2009/09/16 17:02:55 fauli Exp $
+
+  16 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
+  eselect-python-20090824.ebuild:
+  stable x86, bug 284971
+
+  15 Sep 2009; Tom Gall <tgall@gentoo.org> eselect-python-20090824.ebuild:
+  stable on ppc64, bug#284971
+
+  14 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  eselect-python-20090824.ebuild, eselect-python-99999999.ebuild:
+  Fix dependencies (bug #284670).
 
   02 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   eselect-python-20090824.ebuild,
