align with gx86 for syncing (Portage version: 2.2.00.14411-prefix/svn/Darwin powerpc)

--- a/sys-process/unixtop/ChangeLog
+++ b/sys-process/unixtop/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for sys-process/unixtop
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Id$
+# $Header: /var/cvsroot/gentoo-x86/sys-process/unixtop/ChangeLog,v 1.1 2009/09/26 14:08:50 grobian Exp $
 
 *unixtop-3.8_beta1-r1 (05 Apr 2009)
 
