--- a/sys-devel/libperl/ChangeLog
+++ b/sys-devel/libperl/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for sys-devel/libperl
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/libperl/ChangeLog,v 1.139 2009/05/29 14:22:00 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/libperl/ChangeLog,v 1.141 2009/09/27 11:00:50 tove Exp $
+
+  27 Sep 2009; Torsten Veller <tove@gentoo.org> libperl-5.10.1.ebuild:
+  Remove orphaned symbolic link
+
+*libperl-5.10.1 (27 Sep 2009)
+
+  27 Sep 2009; Torsten Veller <tove@gentoo.org> +libperl-5.10.1.ebuild:
+  Version bump
 
   29 May 2009; Torsten Veller <tove@gentoo.org> -libperl-5.8.8-r1.ebuild:
   Remove security vulnerable version for bug #271738
