--- a/app-editors/emacs/ChangeLog
+++ b/app-editors/emacs/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-editors/emacs
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs/ChangeLog,v 1.337 2009/09/20 16:07:24 tcunha Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs/ChangeLog,v 1.339 2009/09/27 19:13:10 nixnut Exp $
+
+  27 Sep 2009; nixnut <nixnut@gentoo.org> emacs-23.1.ebuild:
+  ppc stable #285063
+
+  26 Sep 2009; Brent Baude <ranger@gentoo.org> emacs-23.1.ebuild:
+  Marking emacs-23.1 ppc64 for bug 285063
 
   20 Sep 2009; Tiago Cunha <tcunha@gentoo.org> emacs-23.1.ebuild:
   stable sparc, bug 285063
