--- a/app-emacs/wanderlust/ChangeLog
+++ b/app-emacs/wanderlust/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-emacs/wanderlust
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/wanderlust/ChangeLog,v 1.77 2009/09/22 14:03:28 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/wanderlust/ChangeLog,v 1.79 2009/09/27 19:47:32 ulm Exp $
+
+  27 Sep 2009; Ulrich Mueller <ulm@gentoo.org> -wanderlust-2.14.0-r3.ebuild:
+  Remove old.
+
+  27 Sep 2009; nixnut <nixnut@gentoo.org> wanderlust-2.14.0-r5.ebuild:
+  ppc stable #285071
 
   22 Sep 2009; Raúl Porcel <armin76@gentoo.org>
   wanderlust-2.14.0-r5.ebuild:
