sync app-portage/mirrorselect (Portage version: 2.2.00.14200-prefix/svn/SunOS i386)

--- a/app-portage/mirrorselect/ChangeLog
+++ b/app-portage/mirrorselect/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-portage/mirrorselect
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/mirrorselect/ChangeLog,v 1.77 2009/09/22 15:32:33 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/mirrorselect/ChangeLog,v 1.79 2009/09/27 18:00:09 nixnut Exp $
+
+  27 Sep 2009; nixnut <nixnut@gentoo.org> mirrorselect-1.4.2.ebuild:
+  ppc stable #284590
+
+  26 Sep 2009; Brent Baude <ranger@gentoo.org> mirrorselect-1.4.2.ebuild:
+  Marking mirrorselect-1.4.2 ppc64 for bug 284590
 
   22 Sep 2009; Jeroen Roovers <jer@gentoo.org> mirrorselect-1.4.2.ebuild:
   Stable for HPPA (bug #284590).
