sync dev-db/postgresql-server (Portage version: 2.2.00.14200-prefix/svn/SunOS i386)

--- a/dev-db/postgresql-server/ChangeLog
+++ b/dev-db/postgresql-server/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for dev-db/postgresql-server
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-server/ChangeLog,v 1.21 2009/09/09 22:58:27 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-server/ChangeLog,v 1.23 2009/09/27 14:57:23 ranger Exp $
+
+  27 Sep 2009; Brent Baude <ranger@gentoo.org>
+  postgresql-server-8.4.1.ebuild:
+  Marking postgresql-server-8.4.1 ppc64 stable for bug 285475
+
+  26 Sep 2009; Diego E. Pettenò <flameeyes@gentoo.org>
+  files/postgresql-8.3-server.patch:
+  Remove a probably-fluke .orig file in patch, reduces size from over 60K to
+  less than 10.
 
 *postgresql-server-8.0.22 (09 Sep 2009)
 
