--- a/dev-libs/popt/ChangeLog
+++ b/dev-libs/popt/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for dev-libs/popt
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/popt/ChangeLog,v 1.65 2009/09/24 11:09:11 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/popt/ChangeLog,v 1.68 2009/09/27 19:47:51 nixnut Exp $
+
+  27 Sep 2009; nixnut <nixnut@gentoo.org> popt-1.14.ebuild:
+  ppc stable #286199
+
+  27 Sep 2009; Brent Baude <ranger@gentoo.org> popt-1.14.ebuild:
+  Marking popt-1.14 ppc64 for bug 286199
+
+  27 Sep 2009; Markus Meier <maekke@gentoo.org> popt-1.14.ebuild:
+  amd64/arm/x86 stable, bug #286199
 
 *popt-1.15 (24 Sep 2009)
 
