--- a/dev-perl/DBD-Pg/ChangeLog
+++ b/dev-perl/DBD-Pg/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/DBD-Pg
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBD-Pg/ChangeLog,v 1.65 2009/09/07 09:20:52 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBD-Pg/ChangeLog,v 1.67 2009/09/27 14:35:26 ranger Exp $
+
+  27 Sep 2009; Brent Baude <ranger@gentoo.org> DBD-Pg-2.15.1.ebuild:
+  Marking DBD-Pg-2.15.1 ppc64 for bug 276768
+
+  27 Sep 2009; Markus Meier <maekke@gentoo.org> DBD-Pg-2.15.1.ebuild:
+  amd64/x86 stable, bug #276768
 
   07 Sep 2009; Torsten Veller <tove@gentoo.org> -DBD-Pg-2.11.8.ebuild:
   Cleanup
