sync dev-python/egenix-mx-base (Portage version: 2.2.00.14200-prefix/svn/SunOS i386)

--- a/dev-python/egenix-mx-base/ChangeLog
+++ b/dev-python/egenix-mx-base/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/egenix-mx-base
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/egenix-mx-base/ChangeLog,v 1.47 2009/09/22 20:51:26 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/egenix-mx-base/ChangeLog,v 1.49 2009/09/27 19:09:50 nixnut Exp $
+
+  27 Sep 2009; nixnut <nixnut@gentoo.org> egenix-mx-base-3.1.2.ebuild:
+  ppc stable #285001
+
+  26 Sep 2009; Brent Baude <ranger@gentoo.org> egenix-mx-base-3.1.2.ebuild:
+  Marking egenix-mx-base-3.1.2 ppc64 for bug 285001
 
   22 Sep 2009; Jeroen Roovers <jer@gentoo.org> egenix-mx-base-3.1.2.ebuild:
   Stable for HPPA (bug #285001).
