--- a/dev-python/lxml/ChangeLog
+++ b/dev-python/lxml/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/lxml
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/lxml/ChangeLog,v 1.61 2009/09/19 11:01:49 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/lxml/ChangeLog,v 1.63 2009/09/27 18:49:32 nixnut Exp $
+
+  27 Sep 2009; nixnut <nixnut@gentoo.org> lxml-2.2.2.ebuild:
+  ppc stable #284981
+
+  26 Sep 2009; Brent Baude <ranger@gentoo.org> lxml-2.2.2.ebuild:
+  Marking lxml-2.2.2 ppc64 for bug 284981
 
   19 Sep 2009; Markus Meier <maekke@gentoo.org> lxml-2.2.2.ebuild:
   amd64/x86 stable, bug #284981
