--- a/dev-python/virtualenv/ChangeLog
+++ b/dev-python/virtualenv/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/virtualenv
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/virtualenv/ChangeLog,v 1.13 2009/09/18 23:12:15 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/virtualenv/ChangeLog,v 1.15 2009/09/27 19:02:05 nixnut Exp $
+
+  27 Sep 2009; nixnut <nixnut@gentoo.org> virtualenv-1.3.3.ebuild:
+  ppc stable #284994
+
+  26 Sep 2009; Brent Baude <ranger@gentoo.org> virtualenv-1.3.3.ebuild:
+  Marking virtualenv-1.3.3 ppc64 for bug 284994
 
   18 Sep 2009; Markus Meier <maekke@gentoo.org> virtualenv-1.3.3.ebuild:
   amd64 stable, bug #284994
