--- a/dev-util/ftjam/ChangeLog
+++ b/dev-util/ftjam/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/ftjam
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/ftjam/ChangeLog,v 1.14 2009/09/22 07:13:52 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/ftjam/ChangeLog,v 1.16 2009/09/27 19:30:29 nixnut Exp $
+
+  27 Sep 2009; nixnut <nixnut@gentoo.org> ftjam-2.5.3_rc2-r1.ebuild:
+  ppc stable #285632
+
+  27 Sep 2009; Brent Baude <ranger@gentoo.org> ftjam-2.5.3_rc2-r1.ebuild:
+  Marking ftjam-2.5.3_rc2-r1 ppc64 for bug 285632
 
   22 Sep 2009; Markus Meier <maekke@gentoo.org> ftjam-2.5.3_rc2-r1.ebuild:
   amd64/x86 stable, bug #285632
