--- a/media-libs/netpbm/ChangeLog
+++ b/media-libs/netpbm/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/netpbm
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/netpbm/ChangeLog,v 1.223 2009/09/10 15:48:22 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/netpbm/ChangeLog,v 1.225 2009/09/27 20:15:44 nixnut Exp $
+
+  27 Sep 2009; nixnut <nixnut@gentoo.org> netpbm-10.46.00-r1.ebuild:
+  ppc stable #285647
+
+  27 Sep 2009; Brent Baude <ranger@gentoo.org> netpbm-10.46.00-r1.ebuild:
+  Marking netpbm-10.46.00-r1 ppc64 for bug 285647
 
   10 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
   netpbm-10.44.00-r1.ebuild, netpbm-10.46.00.ebuild,
